--- a/example/notes/2020-05-14-image.md
+++ b/example/notes/2020-05-14-image.md
@@ -5,4 +5,11 @@ Tags:
  - embedding
 ---
 
-![Some image](images/clojure.png)
+This is a simple note with an image being embedded.
+
+Note, that if image has a '@2x' name postfix, it is processed as retina-ready and another similar image of 1x size is expected to be found, i.e. in this case two images should be prepared:
+
+- clojure@2x.png for retina-based screent
+- clojure.png for non-retina screens
+
+![Some image](images/clojure@2x.png)
